# master_thesis

./: .gitmodules  README.md
3d_models/: load_cell_tension_system.f3d  tesion holder v1.f3d  winch.f3d
docs/: NRC_RPi.md  rpi.md  rpi_nrc.md  rpi_nrc_ros2_dds  rpi_nrc_stream.md  rpi_wifi.md  stream.md  wsl.md
graphs/: FiberLossWindows.py  OFDMvsFDM.py
misc_ws/measurments/802.11ahs/MESH/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  MP-AP.txt  rssi-mcs.txt
misc_ws/measurments/802.11ahs/STA-AP MODE/: 1-iperf.txt  2-iperf.txt  3-iperf.txt  4-iperf.txt  5-iperf.txt  6-iperf.txt  7-iperf.txt  8-iperf.txt  rssi-mcs table.txt
misc_ws/optoforce/: README.md  read_sensor.py
ros2_ws/: rosbag1.csv  rosbag2.csv  rosbag3.csv
ros2_ws/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/dynamixel_mx64_control/lib/dynamixel_mx64_control/: dynamixel_control_node
ros2_ws/install/dynamixel_mx64_control/share/dynamixel_mx64_control/: package.ps1  package.sh
ros2_ws/install/test_node/lib/test_node/: test_node
ros2_ws/install/test_node/share/test_node/: package.sh
ros2_ws/install/test_node/share/test_node/cmake/: test_nodeConfig.cmake
ros2_ws/log/: latest_build
ros2_ws/ros2_ws/install/: setup.bash
ros2_ws/ros2_ws/install/dynamixel_mx64_control/share/dynamixel_mx64_control/: package.zsh
ros2_ws/ros2_ws/install/test_node/share/test_node/: package.sh
ros2_ws/ros2_ws/src/dynamixel_mx64_control/install/: local_setup.sh  setup.sh
ros2_ws/ros2_ws/src/dynamixel_mx64_control/install/dynamixel_mx64_control/share/dynamixel_mx64_control/: local_setup.sh  package.sh
ros2_ws/ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/ros2_ws/src/install/dynamixel_mx64_control/share/dynamixel_mx64_control/: package.sh
ros2_ws/ros2_ws/src/log/: latest_build
ros2_ws/ros2_ws/src/test_node/: CMakeLists.txt
ros2_ws/ros2_ws/src/test_node/install/: local_setup.sh
ros2_ws/ros2_ws/src/test_node/install/test_node/share/test_node/: local_setup.sh  package.bash  package.sh
ros2_ws/rosbag2_2025_06_04-10_16_57/: rosbag2_2025_06_04-10_16_57_0.mcap
ros2_ws/rosbags/rosbag2_2025_06_03-16_15_24/: metadata.yaml  rosbag2_2025_06_03-16_15_24_0.mcap
ros2_ws/rosbags/rosbag2_2025_06_04-10_16_57/: metadata.yaml
ros2_ws/rosbags/rosbag2_2025_06_04-10_34_11/: metadata.yaml  rosbag2_2025_06_04-10_34_11_0.mcap
ros2_ws/rosbags/rosbag2_2025_06_04-10_41_35/: metadata.yaml  rosbag2_2025_06_04-10_41_35_0.mcap
ros2_ws/src/dynamixel_mx64_control/: CMakeLists.txt  package.xml
ros2_ws/src/dynamixel_mx64_control/install/dynamixel_mx64_control/lib/dynamixel_mx64_control/: dynamixel_control_node  dynamixel_simple_node
ros2_ws/src/dynamixel_mx64_control/install/dynamixel_mx64_control/share/dynamixel_mx64_control/cmake/: dynamixel_mx64_controlConfig.cmake
ros2_ws/src/dynamixel_mx64_control/log/: latest_build
ros2_ws/src/dynamixel_mx64_control/src/: dynamixel_control_node.cpp
ros2_ws/src/esp_load_cell/: package.xml  setup.cfg  setup.py
ros2_ws/src/esp_load_cell/esp_load_cell/: .serial_node.py.swp  serial_node.py
ros2_ws/src/install/dynamixel_mx64_control/lib/dynamixel_mx64_control/: dynamixel_control_node
ros2_ws/src/install/dynamixel_mx64_control/share/dynamixel_mx64_control/: package.bash  package.dsv
ros2_ws/src/install/test_node/share/test_node/: local_setup.sh  package.ps1  package.sh
ros2_ws/src/optoforce_sensor_publisher/: package.xml  setup.cfg  setup.py
ros2_ws/src/optoforce_sensor_publisher/optoforce_sensor_publisher/: optoforce_sensor_node.py
ros2_ws/src/test_node/: CMakeLists.txt
ros2_ws/src/test_node/install/: setup.sh
ros2_ws/src/test_node/install/test_node/share/test_node/: package.dsv  package.xml  package.zsh
ros2_ws/src/test_node/log/: latest_build
ros2_ws/src/test_node/src/: test_node.cpp
