<?xml version="1.0"?>
<package format="3">
  <name>dynamixel_mx64_control</name>
  <version>1.0.0</version>
  <description>ROS2 package to control a Dynamixel MX-64 motor using the Dynamixel SDK using Current mode.</description>

  <maintainer email="viktor.horvat@fer.fer">vhorvat</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
 
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
